--- a/doc/Esterni/Glossario/terminiGlossario.tex
+++ b/doc/Esterni/Glossario/terminiGlossario.tex
@@ -147,6 +147,7 @@
 	\item[Slack] Piattaforma per la comunicazione all'interno di un'organizzazione.
 	\item[ periodo di slack] Margine temporale che definisce per quanto tempo si possa ritardare un'attività senza causare ad altre attività un rallentamento.
 	\item[SonarQube] Piattaforma open source per il controllo della qualità del codice sorgente.
+	\item[SPA] Acronimo per Single Page Application, sito web che offre una applicazione che risiede in una singola pagina web, con l'obiettivo di fornire una User Experience simile ad una applicazione desktop.
 	\item[SPICE] Acronimo per Software Process Improvement and Capability Determination; è un insieme di documenti tecnici standard per il processo di sviluppo software e le funzioni di gestione di business correlati. È uno degli standard congiunti dell'Organizzazione Internazionale per la Standardizzazione (ISO) e della Commissione Elettrotecnica Internazionale (IEC); corrisponde allo standard ISO/IEC 15504.
 	\item[Spring] Libreria open-source Java che offre un'interfaccia semplificata per gestire le richieste HTTP in arrivo a un server.
 	\item[SQL] Structured Query Language: linguaggio di programmazione dichiarativo basato sull'algebra relazionale che serve a creare, manipolare e interrogare basi di dati relazionali.
