--- a/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
+++ b/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
@@ -57,8 +57,8 @@
 \input{tex/packageClassiST-BE}
 
 % JSON, client-server... ???
-\section{Modelli dei dati e interfacce}
-\input{tex/modelli}
+% \section{Modelli dei dati e interfacce}
+% \input{tex/modelli}
 
 % - tracciamento componenti-reqq
 % - tracciamento reqq-componenti
