--- a/doc/Esterni/Piano_di_qualifica/diario.tex
+++ b/doc/Esterni/Piano_di_qualifica/diario.tex
@@ -2,6 +2,15 @@
 % da includere con \include{diario}
 
 \begin{diario}
+	2.0.0 & {\LS} (Responsabile) & 03/03/2017 & Approvazione del documento \\ \hline
+	1.1.0 & {\MM} (Verificatore) & 03/03/2017 & Verifica del documento\\ \hline
+	1.0.7 & {\PB} (Verificatore) & 28/02/2017 & Stesura resoconto attività\\ \hline
+	1.0.6 & {\MM} (Verificatore) & 28/02/2017 & Inserito test di integrazione\\ \hline
+	1.0.5 & {\LS} (Verificatore) & 28/02/2017 & Inseriti test di sistema\\ \hline
+	1.0.4 & {\AZ} (Verificatore) & 28/02/2017 & Inseriti test di validazione\\ \hline
+	1.0.3 & {\AZ} (Verificatore) & 25/02/2017 & Inseriti obiettivi di qualità di processo\\ \hline
+	1.0.2 & {\LS} (Verificatore) & 25/02/2017 & Inseriti obiettivi di qualità di prodotto\\ \hline
+	1.0.1 & {\MM} (Verificatore) & 22/02/2017 & Spostate metriche da PdQ a Ndp \\ \hline
 	1.0.0 & {\LB} (Responsabile) & 09/01/2017 & Approvazione del documento \\ \hline
 	0.1.0 & {\GG} (Verificatore) & 05/01/2017 & Verifica del documento \\ \hline
 	0.0.10 & {\LS} (Analista) & 09/01/2017 & Stesura resoconto attività \\ \hline
