sistemato diari e verbali

--- a/doc/Interni/Verbali/VI_17-02-08.tex
+++ b/doc/Interni/Verbali/VI_17-02-08.tex
@@ -4,12 +4,12 @@
 \input{../../util/hx-ambiente}
 
 \version{1.0.0}
-\creaz{23 febbraio 2017}
+\creaz{9 febbraio 2017}
 \author{\LS}
 \supervisor{\LB}
 \uso{interno}
 \dest{Tutti i membri del gruppo}
-\title{Riunione interna del 22 febbraio 2017}
+\title{Riunione interna del 8 febbraio 2017}
 % \date{9 gennaio 2017}
 
 \begin{document}
@@ -19,7 +19,7 @@
 \begin{description}
 	\item[Orario] 09:30 - 17:30;
 	\item[Durata] 8 ore;
-	\item[Luogo incontro] Aula Lum250 via Luzzatti;
+	\item[Luogo incontro] Abitazione \LB;
 	\item[Oggetto] analisi struttura \gloss{client} di \proj{};
 	\item[Segretario] \LS; 
 	\item[Partecipanti] \ALL.
