--- a/doc/Interni/Verbali/VI_17-02-15.tex
+++ b/doc/Interni/Verbali/VI_17-02-15.tex
@@ -4,12 +4,12 @@
 \input{../../util/hx-ambiente}
 
 \version{1.0.0}
-\creaz{25 febbraio 2017}
+\creaz{16 febbraio 2017}
 \author{\LS}
-\supervisor{|LB}
+\supervisor{\LB}
 \uso{interno}
 \dest{Tutti i membri del gruppo}
-\title{Riunione interna del 24 febbraio 2017}
+\title{Riunione interna del 15 febbraio 2017}
 % \date{9 gennaio 2017}
 
 \begin{document}
@@ -19,7 +19,7 @@
 \begin{description}
 	\item[Orario] 09:30 - 13:30;
 	\item[Durata] 4 ore;
-	\item[Luogo incontro] Aula Lum250 via Luzzatti;
+	\item[Luogo incontro] Abitazione \GG;
 	\item[Oggetto] analisi struttura \gloss{server} di \proj{};
 	\item[Segretario] \LS; 
 	\item[Partecipanti] \ALL.
