sistemata immagine pdp e pdp

--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_2_0_0.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_2_0_0.tex
@@ -1465,7 +1465,7 @@ Qualora parte dei diagrammi non vengano riportati, si intende che essi hanno ris
 \caption{Variazione rispetto alla pianificazione per la \PA{} diagramma di Gantt (parte 1)}
 \end{figure}
 
-Si è verificato un ritardo nella stesura dei documenti del \PdQ{} a causa del carico di lavoro sottostimato a preventivo per la correzione degli errori risultante dalla prima revisione di avanzamento. All'attività \emph{Stesura Incremento Piano di Qualifica [RP]} è stata dunque riservata un periodo temporale più lungo e maggiori risorse, sottraendole dall'attività di progettazione. Ulteriori osservazioni sono descritte dopo la seguente sezione.
+Si è verificato un ritardo nella stesura dei documenti del \PdQ{} a causa del carico di lavoro sottostimato a preventivo per la correzione degli errori risultante dalla prima revisione di avanzamento. All'attività \emph{Stesura Incremento Piano di Qualifica [RP]} è stata dunque riservata un periodo temporale più lungo e maggiori risorse, sottraendole dall'attività di progettazione. La data d'inizio di tale attività, a causa della riunione organizzata dal \TV{} del 21-02-2017, è stata spostata dal giorno 6-02-2017 al giorno 22-02-2017. Ulteriori osservazioni sono descritte dopo la seguente sezione.
 
 
 \begin{figure}[H]
