--- a/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
+++ b/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
@@ -75,7 +75,7 @@
 \section{Architettura di Backbone.js}
 \input{tex/appbackbone}
 
-\section{Pattern creazionali}
+\section{Pattern creazionali} \label{sec:app_creaz}
 \input{tex/pattern}
 
 \end{document}
