Aggiornamento Gulpease SV BV

--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_2_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_2_0_0.tex
@@ -1973,13 +1973,15 @@ All'interno di questa sezione vengono riportati gli esiti delle attività di ver
 		\hline
 		\textbf{Documento} 		&\textbf{Valutazione} &\textbf{~~~~~~Esito~~~~~~} \\
 		\hline
-		\PdQ 					&		&~~~~~~Superato~~~~~~\\
-		\NdP 					&		&~~~~~~Superato~~~~~~\\
-		\AdR 					&		&~~~~~~Superato~~~~~~\\
-		\PdP 					&		&~~~~~~Superato~~~~~~\\
-		\ST 					&		&~~~~~~Superato~~~~~~\\	
-		\Glossario 				&		&~~~~~~Superato~~~~~~\\
-		\textit{Verbali.pdf} 			&		&~~~~~~Superato~~~~~~\\
+		\PdQ 					&61		&~~~~~~Superato~~~~~~\\
+		\NdP 					&49		&~~~~~~Superato~~~~~~\\
+		\AdR 					&71		&~~~~~~Superato~~~~~~\\
+		\PdP 					&55		&~~~~~~Superato~~~~~~\\
+		\ST 					&69		&~~~~~~Superato~~~~~~\\	
+		\Glossario 				&48		&~~~~~~Superato~~~~~~\\
+		\textit{VI_17-02-16.pdf} 		&57		&~~~~~~Superato~~~~~~\\
+		\textit{VI_17-02-22.pdf} 		&59		&~~~~~~Superato~~~~~~\\
+		\textit{VI_17-02-24.pdf} 		&62		&~~~~~~Superato~~~~~~\\
 		\hline
 		\end{tabular}
 		\caption{Esiti del calcolo dell'indice di Gulpease dei documenti consegnati}
@@ -1994,17 +1996,20 @@ All'interno di questa sezione vengono riportati gli esiti delle attività di ver
 		\hline
 		\textbf{Documento} 		&\textbf{Schedule variance} &\textbf{Budget variance} 		\\
 		\hline
-		\PdQ 					&0\%		&0\%\\
+		\PdQ 					&0\%		&-105*\%\\
 		\NdP 					&0\%		&0\%\\
 		\AdR 					&0\%		&0\%\\
 		\PdP 					&0\%		&0\%\\
-		\ST					&0\%		&0\%\\
+		\ST					&0\%		&+11*\%\\
 		\Glossario 				&0\%		&0\%\\
-		\textit{Verbali.pdf} 			&0\%		&0\%\\
+		\textit{VI_17-02-16.pdf} 		&0\%		&0\%\\
+		\textit{VI_17-02-22.pdf} 		&0\%		&0\%\\
+		\textit{VI_17-02-24.pdf} 		&0\%		&0\%\\
 		\hline
 		\end{tabular}
 		\caption{Esiti del calcolo degli indici di schedule e budget variance}
 		\end{table}
+		* è stato necessario allocare un numero maggiore di ore per il piano di qualifica rispetto a quanto preventivato alla luce della valutazione negativa ottenuta in sede di revisione RR. Tali ore sono state sottratte all'attività di progettazione e quindi alla redazione del documento \ST.
 		
 		\subsubsection{Verifica processo di architettura del software}
 		La verifica del rispetto degli obiettivi stabiliti per tale processo è stata effettuata calcolando una serie di metriche specificate nel documento \NdP. Queste metriche sono d'aiuto alla comprensione del grado di completezza, correttezza e stile dell'architettura software prodotta.
