--- a/doc/Esterni/Specifica_tecnica/Specifica_tecnica_1_0_0.tex
+++ b/doc/Esterni/Specifica_tecnica/Specifica_tecnica_1_0_0.tex
@@ -3,10 +3,10 @@
 
 \input{../../util/hx-ambiente}
 
-\version{0.0.1}
+\version{1.0.0}
 \creaz{15 febbraio 2017}
-\author{...}
-\supervisor{...}
+\author{\ALL}
+\supervisor{\GG}
 \uso{esterno}
 \dest{\ALL}
 \title{Specifica Tecnica}
