corretti nomi package test integrazione PdQ

--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_2_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_2_0_0.tex
@@ -1818,32 +1818,32 @@ I test di sistema vengono eseguiti sul prodotto una volta che tutte le sue compo
 	\subsection{Test di Integrazione}
 	I test di integrazione consentono di controllare che più moduli funzionino assieme in modo corretto.
 	
-	\subsubsection{Descrizione dei Test di Integrazione}
+		\subsubsection{Descrizione dei Test di Integrazione}
 \normalsize
 \begin{longtable}{|c|>{}m{8cm}|c|}
 \hline 
 \textbf{Id Test} & \textbf{Descrizione} & \textbf{Stato}\\
 \hline
 \endhead
-\hypertarget{TI1}{TI1} & Test di integrazione finale per le componenti Client e Server & \textit{Non Implementato}\\ \hline
-\hypertarget{TI2}{TI2} & Test di integrazione fra le componenti Compiler, Controller, Generator, Parser, Project, Template e Utility. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI3}{TI3} & Verificare che il sistema gestisca correttamente le componenti relative al package Compiler. In particolare che gestisca correttamente l'interazione con il Controller di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI4}{TI4} & Verificare che il sistema gestisca correttamente le componenti relative al package Controller. In particolare che gestisca correttamente l'interazione con i package Compiler, Utility, Parser e Generator di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI5}{TI5} & Verificare che il sistema gestisca correttamente le componenti relative al package Generator. In particolare che gestisca correttamente l'interazione con i package Controller, Project e Template di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI6}{TI6} & Verificare che il sistema gestisca correttamente le componenti relative al package Parser. In particolare che gestisca correttamente l'interazione con i package Controller e Project di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI7}{TI7} & Verificare che il sistema gestisca correttamente le componenti relative al package Project. In particolare che gestisca correttamente l'interazione con i package Generator, Parser e Stereotype di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI8}{TI8} & Verificare che il sistema gestisca correttamente le componenti relative al package Stereotype. In particolare che gestisca correttamente l'interazione con il package Project di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI9}{TI9} & Verificare che il sistema gestisca correttamente le componenti relative al package Template. In particolare che gestisca correttamente l'interazione con il package Generator di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI10}{TI10} & Verificare che il sistema gestisca correttamente le componenti relative al package Utility. In particolare che gestisca correttamente l'interazione con il package Controller di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI11}{TI11} & Verificare che il sistema gestisca correttamente le componenti relative al package Compiler::Java. In particolare che gestisca correttamente l'interazione con gli elementi del package Compiler di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI12}{TI12} & Verificare che il sistema gestisca correttamente le componenti relative al package Generator::Java. In particolare che gestisca correttamente l'interazione con gli elementi del package Generator di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI13}{TI13} & Verificare che il sistema gestisca correttamente le componenti relative al package Template::Java. In particolare che gestisca correttamente l'interazione con gli elementi del package Template di SWEDesigner::Server. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI14}{TI14} & Test di integrazione fra le componenti CellType, Collection, Model, Utility e View e la libreria esterna \gloss{JointJS}. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI15}{TI15} & Verificare che il sistema gestisca correttamente le componenti relative al package CellType. In particolare che gestisca correttamente l'interazione con il package View di SWEDesigner::Client e la libreria esterna JointJS. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI16}{TI16} & Verificare che il sistema gestisca correttamente le componenti relative al package Collection. In particolare che gestisca correttamente l'interazione con il package Model di SWEDesigner::Client e la libreria esterna JointJS. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI17}{TI17} & Verificare che il sistema gestisca correttamente le componenti relative al package Model. In particolare che gestisca correttamente l'interazione con i package Collection e View di SWEDesigner::Client e la libreria esterna JointJS. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI18}{TI18} & Verificare che il sistema gestisca correttamente le componenti relative al package Model::Utility. In particolare che gestisca correttamente l'interazione con i package Model::CellType, Model e View di SWEDesigner::Client. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI19}{TI19} & Verificare che il sistema gestisca correttamente le componenti relative al package View. In particolare che gestisca correttamente l'interazione con i package Model, Model::CellType e Model::Utility di SWEDesigner::Client. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI1}{TI1} & Test di integrazione finale per le componenti client e server & \textit{Non Implementato}\\ \hline
+\hypertarget{TI2}{TI2} & Test di integrazione fra le componenti compiler, controller, generator, parser, project, template e utility. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI3}{TI3} & Verificare che il sistema gestisca correttamente le componenti relative al package compiler. In particolare che gestisca correttamente l'interazione con il controller di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI4}{TI4} & Verificare che il sistema gestisca correttamente le componenti relative al package controller. In particolare che gestisca correttamente l'interazione con i package compiler, utility, parser e generator di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI5}{TI5} & Verificare che il sistema gestisca correttamente le componenti relative al package generator. In particolare che gestisca correttamente l'interazione con i package controller, project e template di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI6}{TI6} & Verificare che il sistema gestisca correttamente le componenti relative al package parser. In particolare che gestisca correttamente l'interazione con i package controller e project di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI7}{TI7} & Verificare che il sistema gestisca correttamente le componenti relative al package project. In particolare che gestisca correttamente l'interazione con i package generator, parser e stereotype di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI8}{TI8} & Verificare che il sistema gestisca correttamente le componenti relative al package stereotype. In particolare che gestisca correttamente l'interazione con il package project di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI9}{TI9} & Verificare che il sistema gestisca correttamente le componenti relative al package template. In particolare che gestisca correttamente l'interazione con il package generator di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI10}{TI10} & Verificare che il sistema gestisca correttamente le componenti relative al package utility. In particolare che gestisca correttamente l'interazione con il package controller di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI11}{TI11} & Verificare che il sistema gestisca correttamente le componenti relative al package compiler::java. In particolare che gestisca correttamente l'interazione con gli elementi del package compiler di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI12}{TI12} & Verificare che il sistema gestisca correttamente le componenti relative al package generator::java. In particolare che gestisca correttamente l'interazione con gli elementi del package generator di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI13}{TI13} & Verificare che il sistema gestisca correttamente le componenti relative al package template::java. In particolare che gestisca correttamente l'interazione con gli elementi del package template di SWEDesigner::server. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI14}{TI14} & Test di integrazione fra le componenti celltypes, collection, model, utility e view e la libreria esterna \gloss{JointJS}. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI15}{TI15} & Verificare che il sistema gestisca correttamente le componenti relative al package celltypes. In particolare che gestisca correttamente l'interazione con il package view di SWEDesigner::client e la libreria esterna JointJS. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI16}{TI16} & Verificare che il sistema gestisca correttamente le componenti relative al package collection. In particolare che gestisca correttamente l'interazione con il package model di SWEDesigner::client e la libreria esterna JointJS. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI17}{TI17} & Verificare che il sistema gestisca correttamente le componenti relative al package model. In particolare che gestisca correttamente l'interazione con i package collection e view di SWEDesigner::client e la libreria esterna JointJS. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI18}{TI18} & Verificare che il sistema gestisca correttamente le componenti relative al package model::utility. In particolare che gestisca correttamente l'interazione con i package model::celltypes, model e view di SWEDesigner::client. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI19}{TI19} & Verificare che il sistema gestisca correttamente le componenti relative al package view. In particolare che gestisca correttamente l'interazione con i package model, model::celltypes e model::utility di SWEDesigner::client. & \textit{Non Implementato}\\ \hline
 \caption[Test di Integrazione]{Test di Integrazione}
 \label{tabella:test2}
 \end{longtable}
@@ -1856,24 +1856,24 @@ I test di sistema vengono eseguiti sul prodotto una volta che tutte le sue compo
 \hline
 \endhead
 \hyperlink{TI1}{TI1} & \texttt{SWEDesigner}\\ \hline
-\hyperlink{TI2}{TI2} & \texttt{SWEDesigner::Server}\\ \hline
-\hyperlink{TI3}{TI3} & \texttt{SWEDesigner::Server::Compiler}\\ \hline
-\hyperlink{TI4}{TI4} & \texttt{SWEDesigner::Server::Controller}\\ \hline
-\hyperlink{TI5}{TI5} & \texttt{SWEDesigner::Server::Generator}\\ \hline
-\hyperlink{TI6}{TI6} & \texttt{SWEDesigner::Server::Parser}\\ \hline
-\hyperlink{TI7}{TI7} & \texttt{SWEDesigner::Server::Project}\\ \hline
-\hyperlink{TI8}{TI8} & \texttt{SWEDesigner::Server::Stereotype}\\ \hline
-\hyperlink{TI9}{TI9} & \texttt{SWEDesigner::Server::Template}\\ \hline
-\hyperlink{TI10}{TI10} & \texttt{SWEDesigner::Server::Utility}\\ \hline
-\hyperlink{TI11}{TI11} & \texttt{SWEDesigner::Server::Compiler::Java}\\ \hline
-\hyperlink{TI12}{TI12} & \texttt{SWEDesigner::Server::Generator::Java}\\ \hline
-\hyperlink{TI13}{TI13} & \texttt{SWEDesigner::Server::Template::Java}\\ \hline
-\hyperlink{TI14}{TI14} & \texttt{SWEDesigner::Client}\\ \hline
-\hyperlink{TI15}{TI15} & \texttt{SWEDesigner::Client::Model::CellTypes}\\ \hline
-\hyperlink{TI16}{TI16} & \texttt{SWEDesigner::Client::Collection}\\ \hline
-\hyperlink{TI17}{TI17} & \texttt{SWEDesigner::Client::Model}\\ \hline
-\hyperlink{TI18}{TI18} & \texttt{SWEDesigner::Client::Model::Utility}\\ \hline
-\hyperlink{TI19}{TI19} & \texttt{SWEDesigner::Client::View}\\ \hline
+\hyperlink{TI2}{TI2} & \texttt{SWEDesigner::server}\\ \hline
+\hyperlink{TI3}{TI3} & \texttt{SWEDesigner::server::compiler}\\ \hline
+\hyperlink{TI4}{TI4} & \texttt{SWEDesigner::server::controller}\\ \hline
+\hyperlink{TI5}{TI5} & \texttt{SWEDesigner::server::generator}\\ \hline
+\hyperlink{TI6}{TI6} & \texttt{SWEDesigner::server::parser}\\ \hline
+\hyperlink{TI7}{TI7} & \texttt{SWEDesigner::server::project}\\ \hline
+\hyperlink{TI8}{TI8} & \texttt{SWEDesigner::server::stereotype}\\ \hline
+\hyperlink{TI9}{TI9} & \texttt{SWEDesigner::server::template}\\ \hline
+\hyperlink{TI10}{TI10} & \texttt{SWEDesigner::server::utility}\\ \hline
+\hyperlink{TI11}{TI11} & \texttt{SWEDesigner::server::compiler::java}\\ \hline
+\hyperlink{TI12}{TI12} & \texttt{SWEDesigner::server::generator::java}\\ \hline
+\hyperlink{TI13}{TI13} & \texttt{SWEDesigner::server::template::java}\\ \hline
+\hyperlink{TI14}{TI14} & \texttt{SWEDesigner::client}\\ \hline
+\hyperlink{TI15}{TI15} & \texttt{SWEDesigner::client::model::celltypes}\\ \hline
+\hyperlink{TI16}{TI16} & \texttt{SWEDesigner::client::collection}\\ \hline
+\hyperlink{TI17}{TI17} & \texttt{SWEDesigner::client::model}\\ \hline
+\hyperlink{TI18}{TI18} & \texttt{SWEDesigner::client::model::utility}\\ \hline
+\hyperlink{TI19}{TI19} & \texttt{SWEDesigner::client::view}\\ \hline
 \caption[Tracciamento Test di Integrazione-Componenti]{Tracciamento Test di Integrazione-Componenti}
 \label{tabella:ts-requi}
 \end{longtable}
